--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
         <div class="lowernav">
             <ul class="menubar">
                 <li class="menu"><a href="#">Home</a></li>
-                <li class="menu dropdown"><a href="/html/allRecipe.html">Recipes
+                <li class="menu dropdown"><a href="html/allRecipe.html">Recipes
                         <ul class="dropdown-menu">
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#breakfast">Breakfast</a></li>
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#chicken">Chicken</a></li>
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#Vegetarian">Vegetarian</a></li>
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#seafood">seafood</a></li>
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#Dessert">Desserts</a></li>
-                            <li class="dropdown_item"><a href="/html/allRecipe.html#Miscellaneous">Miscellaneous</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#breakfast">Breakfast</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#chicken">Chicken</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#Vegetarian">Vegetarian</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#seafood">seafood</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#Dessert">Desserts</a></li>
+                            <li class="dropdown_item"><a href="html/allRecipe.html#Miscellaneous">Miscellaneous</a></li>
                         </ul>
                     </a>
                 </li>
-                <li class="menu"><a href="/html/about_us.html">About us</a></li>
-                <li class="menu"><a href="/html/blogs.html">Blogs</a></li>
+                <li class="menu"><a href="html/about_us.html">About us</a></li>
+                <li class="menu"><a href="html/blogs.html">Blogs</a></li>
             </ul>
             <div class="btns">
-                <button class="likedRecipes-btn btn"><a href="/html/likedRecipies.html">Liked Recipes</a></button>
-                <button class="logIn btn"><a href="/html/login.html">Login</a></button>
+                <button class="likedRecipes-btn btn"><a href="html/likedRecipies.html">Liked Recipes</a></button>
+                <button class="logIn btn"><a href="html/login.html">Login</a></button>
             </div>
         </div>
     </nav>
@@ -311,7 +311,7 @@
 
     </footer>
 
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
