--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <button class="srchBtn">search</button>
             </div>
             <div class="socialLogo">
-                <img src="/4747497_social media_facebook_icon.png" alt="" class="socialIcons">
-                <img src="/5279112_camera_instagram_social media_instagram logo_icon.png" alt="" class="socialIcons">
-                <img src="/5282551_tweet_twitter_twitter logo_icon.png" alt="" class="socialIcons">
-                <img src="/5305164_play_video_youtube_youtube logo_icon.png" alt="" class="socialIcons">
+                <img src="4747497_social media_facebook_icon.png" alt="" class="socialIcons">
+                <img src="5279112_camera_instagram_social media_instagram logo_icon.png" alt="" class="socialIcons">
+                <img src="5282551_tweet_twitter_twitter logo_icon.png" alt="" class="socialIcons">
+                <img src="5305164_play_video_youtube_youtube logo_icon.png" alt="" class="socialIcons">
             </div>
         </div>
         <div class="lowernav">
@@ -56,7 +56,7 @@
         <div class="mainContainer">
             <img src="https://www.themealdb.com/images/media/meals/qptpvt1487339892.jpg" alt="" class="mainImg">
             <h2 class="mainHeading">The most delicious recipe of Tandoori chicken</h2>
-            <button class="recipeBTN"><a href="openRecipe.html?title=Tandoori%20chicken">show recipe</a></button>
+            <button class="recipeBTN"><a href="html/openRecipe.html?title=Tandoori%20chicken">show recipe</a></button>
 
         </div>
         <div class="sidecontainer">
@@ -64,21 +64,21 @@
                 <img src="https://www.themealdb.com/images/media/meals/wyxwsp1486979827.jpg" alt="" class="boxImg">
                 <div class="info">
                     <h3 class="mainHeading">The spicy chicken karahi That really brings the heat</h3>
-                    <button class="recipeBTN"><a href="openRecipe.html?title=Chicken%20Handi">show recipe</a></button>
+                    <button class="recipeBTN"><a href="html/openRecipe.html?title=Chicken%20Handi">show recipe</a></button>
                 </div>
             </div>
             <div class="box">
                 <img src="https://www.themealdb.com/images/media/meals/qtuuys1511387068.jpg" alt="" class="boxImg">
                 <div class="info">
                     <h3 class="mainHeading">Easy recipe of peanut butter cheesecake</h3>
-                    <button class="recipeBTN"><a href="openRecipe.html?title=Peanut%20Butter%20Cheesecake">show recipe</a></button>
+                    <button class="recipeBTN"><a href="html/openRecipe.html?title=Peanut%20Butter%20Cheesecake">show recipe</a></button>
                 </div>
             </div>
             <div class="box">
                 <img src="https://www.themealdb.com/images/media/meals/xutquv1505330523.jpg" alt="" class="boxImg">
                 <div class="info">
                     <h3 class="mainHeading">Grilled mac and cheese sandwich</h3>
-                    <button class="recipeBTN"><a href="openRecipe.html?title=Grilled%20Mac%20and%20Cheese%20Sandwich">show recipe</a></button>
+                    <button class="recipeBTN"><a href="html/openRecipe.html?title=Grilled%20Mac%20and%20Cheese%20Sandwich">show recipe</a></button>
                 </div>
             </div>
         </div>
@@ -90,12 +90,12 @@
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/k29viq1585565980.jpg" alt="" class="flex-img">
                 <h3 class="recipe-heading">Chicken Quinoa Greek Salad</h3>
-                <button class="recipeBTN flexBtn"><a href="openRecipe.html?title=Chicken%20Quinoa%20Greek%20Salad">Recipe</a></button>
+                <button class="recipeBTN flexBtn"><a href="html/openRecipe.html?title=Chicken%20Quinoa%20Greek%20Salad">Recipe</a></button>
             </div>
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/wruvqv1511880994.jpg" alt="" class="flex-img">
                 <h3 class="recipe-heading">Chicken Basquaise</h3>
-                <button class="recipeBTN flexBtn"><a href="openRecipe.html?title=Chicken%20Basquaise">Recipe</a></button>
+                <button class="recipeBTN flexBtn"><a href="html/openRecipe.html?title=Chicken%20Basquaise">Recipe</a></button>
             </div>
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/tytyxu1515363282.jpg" alt="" class="flex-img">
@@ -105,12 +105,12 @@
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/sywswr1511383814.jpg" alt="" class="flex-img">
                 <h3 class="recipe-heading">Banana Pancakes</h3>
-                <button class="recipeBTN flexBtn"><a href="openRecipe.html?title=Banana%20Pancakes">Recipe</a></button>
+                <button class="recipeBTN flexBtn"><a href="html/openRecipe.html?title=Banana%20Pancakes">Recipe</a></button>
             </div>
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/sypxpx1515365095.jpg" alt="" class="flex-img">
                 <h3 class="recipe-heading">Brown Stew Chicken</h3>
-                <button class="recipeBTN flexBtn"><a href="openRecipe.html?title=Brown%20Stew%20Chicken">Recipe</a></button>
+                <button class="recipeBTN flexBtn"><a href="html/openRecipe.html?title=Brown%20Stew%20Chicken">Recipe</a></button>
             </div>
             <div class="flex_container">
                 <img src="https://www.themealdb.com/images/media/meals/wvqpwt1468339226.jpg" alt="" class="flex-img">
