--- a/html/openRecipe.html
+++ b/html/openRecipe.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <ul class="menubar">
-                <li class="menu"><a href="index.html">Home</a></li>
+                <li class="menu"><a href="./index.html">Home</a></li>
                 <li class="menu dropdown"><a href="allRecipe.html">Recipes
                     <ul class="dropdown-menu">
                         <li class="dropdown_item"><a href="allRecipe.html#breakfast">Breakfast</a></li>
