--- a/html/allRecipe.html
+++ b/html/allRecipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="\css\allRecipes.css">
+    <link rel="stylesheet" href="..\css\allRecipes.css">
 
     <title>Recipe</title>
 </head>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <ul class="menubar">
-                <li class="menu"><a href="./index.html">Home</a></li>
+                <li class="menu"><a href="../index.html">Home</a></li>
                 <li class="menu dropdown"><a href="allRecipe.html">Recipes
                     <ul class="dropdown-menu">
                         <li class="dropdown_item"><a href="allRecipe.html#breakfast">Breakfast</a></li>
@@ -51,61 +51,61 @@
     <!-- _______________________banner______________________ -->
 
     <div class="container banner">
-        <img src="/images/flat-lay-2583213_1280.jpg" alt="" class="container_bg">
+        <img src="../images/flat-lay-2583213_1280.jpg" alt="" class="container_bg">
         <div class="banner_content">
             <p class="banner_subhead">PERSONALIZE YOUR EXPERIENCE</p>
             <h2 class="banner_heading">What are your favourite cuisine?</h2>
             <div class="banner_slider">
                 <div class="cuisine">
-                    <img src="/images/american.webp" alt="" class="cuisine_img">
+                    <img src="../images/american.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Japanese</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/arbecue.webp" alt="" class="cuisine_img">
+                    <img src="../images/arbecue.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Thai</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/indian.webp" alt="" class="cuisine_img">
+                    <img src="../images/indian.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Indian</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/italian.webp" alt="" class="cuisine_img">
+                    <img src="../images/italian.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Italian</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/french.webp" alt="" class="cuisine_img">
+                    <img src="../images/french.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">French</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/cuban.webp" alt="" class="cuisine_img">
+                    <img src="../images/cuban.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Chinese</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/english.webp" alt="" class="cuisine_img">
+                    <img src="../images/english.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">English</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/fortuguese.webp" alt="" class="cuisine_img">
+                    <img src="../images/fortuguese.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Canadian</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/german.webp" alt="" class="cuisine_img">
+                    <img src="../images/german.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Turkish</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/greek.webp" alt="" class="cuisine_img">
+                    <img src="../images/greek.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Greek</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/hawaiien.webp" alt="" class="cuisine_img">
+                    <img src="../images/hawaiien.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">British</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/hungarian.webp" alt="" class="cuisine_img">
+                    <img src="../images/hungarian.webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Malaysian</p>
                 </div>
                 <div class="cuisine">
-                    <img src="/images/irish (1).webp" alt="" class="cuisine_img">
+                    <img src="../images/irish (1).webp" alt="" class="cuisine_img">
                     <p class="cuisine_name">Irish</p>
                 </div>
             </div>
@@ -168,7 +168,7 @@
         </div>
 
     </div>
-    <script src="/js/allRecipe.js"></script>
+    <script src="../js/allRecipe.js"></script>
 </body>
 
 </html>
