--- a/html/likedRecipies.html
+++ b/html/likedRecipies.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="\css\liked_recipes.css">
+    <link rel="stylesheet" href="..\css\liked_recipes.css">
     <title>YumYum</title>
 </head>
 
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <ul class="menubar">
-                <li class="menu"><a href="./index.html">Home</a></li>
+                <li class="menu"><a href="../index.html">Home</a></li>
                 <li class="menu dropdown"><a href="allRecipe.html">Recipes
                     <ul class="dropdown-menu">
                         <li class="dropdown_item"><a href="allRecipe.html#breakfast">Breakfast</a></li>
@@ -60,7 +60,7 @@
 
 
 
-    <script src="/js/likedRecipes.js"></script>
+    <script src="../js/likedRecipes.js"></script>
 </body>
 
 </html>
