--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>YumYum</title>
 </head>
 
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <ul class="menubar">
-                <li class="menu"><a href="./index.html">Home</a></li>
+                <li class="menu"><a href="../index.html">Home</a></li>
                 <li class="menu dropdown"><a href="allRecipe.html">Recipes
                         <ul class="dropdown-menu">
                             <li class="dropdown_item"><a href="allRecipe.html#breakfast">Breakfast</a></li>
@@ -98,7 +98,7 @@
 
             <div class="toggle">
                 <div class="toggle_item">
-                    <img src="/pexels-zifeng-xia-707303-4020143.jpg" alt="">
+                    <img src="../pexels-zifeng-xia-707303-4020143.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
 
 
 
-    <script src="/js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 
 </html>
