--- a/html/openRecipe.html
+++ b/html/openRecipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="\css\openRecipe.css">
+    <link rel="stylesheet" href="..\css\openRecipe.css">
     <title>YumYum</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <ul class="menubar">
-                <li class="menu"><a href="./index.html">Home</a></li>
+                <li class="menu"><a href="../index.html">Home</a></li>
                 <li class="menu dropdown"><a href="allRecipe.html">Recipes
                     <ul class="dropdown-menu">
                         <li class="dropdown_item"><a href="allRecipe.html#breakfast">Breakfast</a></li>
@@ -50,6 +50,6 @@
 
 
 
-    <script src="/js/openRecipe.js"></script>
+    <script src="../js/openRecipe.js"></script>
 </body>
 </html>
